# usagetracker

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Package.swift  README.md  config.json  flake.nix  install.sh  justfile  uninstall.sh
.github/workflows/: ci.yml  release.yml
Sources/UsageCLI/: main.swift
Sources/UsageCore/: AppConfig.swift  Cards.swift  Format.swift  Models.swift  Pacing.swift  Renderers.swift
Sources/UsageProviders/: CodexLocalProvider.swift  CodexUsageProvider.swift  JSONHelpers.swift  OpenAIAdminProvider.swift  ProviderErrors.swift  UsageProvider.swift
Sources/UsageStore/: UsageDatabase.swift
apps/LiquidGlassTransparency/: Package.swift
apps/LiquidGlassTransparency/Sources/LiquidGlassTransparency/: AppDelegate.swift
apps/UsageMenuBar/: Info.plist  Package.swift  package-dev-app.sh
apps/UsageMenuBar/AppIcon.icon/: icon.json
apps/UsageMenuBar/LaunchAgents/: app.usagetracker.daemon.plist  engineering.super.usagetracker.daemon.plist
apps/UsageMenuBar/Sources/UsageMenuBar/: UsageMenuBar.swift
apps/UsageMenuBar/Sources/UsageMenuBar/App/: AppDelegate.swift  AppState.swift  DaemonLaunchAgent.swift  DaemonSupervisor.swift  DaemonSupervisorSupport.swift  MenuBarProgressIcon.swift
apps/UsageMenuBar/Sources/UsageMenuBar/DesignSystem/: Buttons.swift  ProviderBrand.swift  ProviderIcon.swift  Surfaces.swift  Theme.swift
apps/UsageMenuBar/Tests/UsageMenuBarTests/: DashboardBuilderTests.swift  ReliabilityTests.swift
crates/usage-cli/: Cargo.toml
crates/usage-cli/src/: cli.rs  client.rs  main.rs  render.rs  selection.rs  views.rs
crates/usage-cli/src/render/: activity.rs  admin.rs  labels.rs  mod.rs  status.rs  style.rs  summary.rs  table.rs  usage.rs
crates/usage-core/: Cargo.toml
crates/usage-core/examples/: generate-schemas.rs
crates/usage-core/src/: api.rs  error.rs  ids.rs  lib.rs  model.rs  paths.rs  schema.rs
crates/usage-core/wire-fixtures/: error_v2.json  error_v3.json  refresh_job_v2.json  refresh_job_v3.json  server_info_v2.json  server_info_v3.json  state_v3.json  usage_v2.json  usage_v3.json
crates/usage-daemon/: Cargo.toml
crates/usage-daemon/migrations/: 0001_initial.sql  0002_local_usage_overlays.sql  0002_provider_daily_usage.sql  0003_daily_usage_summary.sql  0003_provider_usage_events.sql  0004_snapshot_retention_indexes.sql  0005_account_identity.sql  0006_notification_state.sql  0007_pending_notifications.sql  0008_forecast_observations.sql
crates/usage-daemon/src/: config.rs  connectivity.rs  daemon.rs  dashboard.rs  fixtures.rs  forecast.rs  health.rs  instance.rs  keychain.rs  local_logs.rs  main.rs  managed_log.rs  notifications.rs  polling.rs  server.rs  storage.rs
crates/usage-daemon/src/providers/: browser_cookies.rs  claude.rs  codex.rs  launchers.rs  mod.rs  opencode.rs  paths.rs  profile_service.rs
crates/usage-daemon/src/providers/claude/: adapter.rs  cli.rs  client.rs  cost.rs  credentials.rs  mod.rs  normalize.rs  pricing.rs  settings.rs
crates/usage-daemon/src/providers/codex/: adapter.rs  app_server.rs  cost.rs  mod.rs  pricing.rs  rate_limits.rs  settings.rs  tests.rs
crates/usage-daemon/src/providers/cursor/: adapter.rs  auth.rs  client.rs  events.rs  mod.rs  model.rs  number.rs  settings.rs  tests.rs
crates/usage-daemon/src/providers/grok/: adapter.rs  auth.rs  billing.rs  cookies.rs  local_sessions.rs  mod.rs  profile.rs  profile_service.rs  rpc.rs  settings.rs  strategy.rs  web.rs
crates/usage-daemon/src/providers/local_usage/: daily.rs  files.rs  mod.rs  windows.rs
crates/usage-daemon/src/providers/opencode/: adapter.rs  cookies.rs  history.rs  http.rs  local.rs  mod.rs  settings.rs  tests.rs  usage.rs  utils.rs
crates/usage-daemon/src/runtime/: account_service.rs  grok_profile_service.rs  launchers.rs  managed_profiles.rs  mod.rs  profile_service.rs  provider_adapter.rs  provider_registry.rs
crates/usage-daemon/src/storage/: accounts.rs  backoff.rs  health.rs  migrations.rs  notifications.rs  tests.rs  usage.rs
docs/: adding-a-provider.md  claude.md  cli-interface-spec.md  cli.md  codex.md  configuration.md  cursor.md  daemon-rust-implementation.md  data-and-privacy.md  grok.md  index.md  model-pricing.md  multi-account.md  opencode.md  planning.md  releasing.md  security.md  troubleshooting.md
docs/api/: errors.md  index.md  methods.md  models.md  protocol.md  refresh-jobs.md  versioning.md
docs/api/schemas/v3/: request.json  response.json
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md
scripts/: benchmark-responses.sh  check-release-version.sh  install.sh  package-release.sh  uninstall.sh
(+44 files in other folders)
