[workspace]
members = [
    "crates/usage-core",
    "crates/usage-daemon",
    "crates/usage-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.86"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
aes = "0.8"
async-trait = "0.1"
cbc = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
futures-util = "0.3"
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }
notify = "8.0.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
regex = "1"
pbkdf2 = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
terminal_size = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
unicode-normalization = "0.1"
wait-timeout = "0.2"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
