[package]
name = "usage-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
iana-time-zone.workspace = true
serde.workspace = true
serde_json.workspace = true
terminal_size.workspace = true
tokio.workspace = true
usage-core = { path = "../usage-core" }
