[package]
name = "usage-daemon"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
aes.workspace = true
async-trait.workspace = true
cbc.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
clap.workspace = true
dirs.workspace = true
futures-util.workspace = true
libc.workspace = true
notify.workspace = true
reqwest.workspace = true
regex.workspace = true
pbkdf2.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
usage-core = { path = "../usage-core" }
uuid.workspace = true
unicode-normalization.workspace = true
wait-timeout.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }
security-framework = "3.7"
security-framework-sys = "2.15"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { workspace = true, features = ["crypto-rust", "linux-native-sync-persistent", "vendored"] }
